Add bullet points.

--- a/thesis/results.tex
+++ b/thesis/results.tex
@@ -351,11 +351,19 @@ little work as possible for faster execution.
 
 \subsection{Efficient DOM Manipulation}
 
-
+\begin{itemize}
+\item DOM manipulation is slow
+\item Using document fragments
+\item Minimizing reflows
+\item \cite{zakas2010high}
+\end{itemize}
 
 \subsection{Efficient Event Handling}
 
-
+\begin{itemize}
+\item Event delegation
+\item \cite{zakas2010high}
+\end{itemize}
 
 \section{Performance Analysis}
 \label{section:performance-analysis}
