Add fixme annotation.

--- a/thesis/results.tex
+++ b/thesis/results.tex
@@ -296,6 +296,9 @@ the offline support by saving the given feedback, for example, to
 localStorage and sending it later to the backend server when the
 network connection is open again.
 
+\fixme{Add dev headaches: device categories, refreshes in dev, cache
+  updates}
+
 \subsection{Handling Interruptions}
 
 Small interruptions are common in mobile networks \citationneeded. For
