--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -89,3 +89,10 @@
   year={1999},
   url={http://www.ietf.org/rfc/rfc2616.txt}
 }
+@article{anderson2010web,
+  title={{T}he {W}eb is {D}ead. {L}ong {L}ive the {I}nternet},
+  author={Anderson, C. and Wolff, M.},
+  journal={Wired Magazine, August},
+  volume={17},
+  year={2010}
+}
