--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -96,3 +96,9 @@
   volume={17},
   year={2010}
 }
+@book{fling2009mobile,
+  title={{M}obile {D}esign and {D}evelopment: {P}ractical {T}echniques for {C}reating {M}obile {S}ites and {W}eb {A}pps},
+  author={Fling, B.},
+  year={2009},
+  publisher={O'Reilly Media, Inc.}
+}
