Add quotation and clean chapter titles.

--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -1,5 +1,15 @@
-\chapter{Introduction: Smartphone Market and the Need for Cross-Platform Support}
+\chapter{Introduction}
 \label{chapter:introduction}
+
+\begin{quotation}
+  \noindent \textit{Not only does the majority of the mobile community
+    believe that the mobile web is the future of the mobile medium,
+    but I've also found it to have the highest return on investment,
+    be it in terms of money, user satisfaction, or development time.}
+  \begin{flushright}
+    -- Brian Fling \cite{fling2009mobile}
+  \end{flushright}
+\end{quotation}
 
 \section{Smartphone Landscape}
 \label{section:smartphone-landscape}
