--- a/thesis/methods.tex
+++ b/thesis/methods.tex
@@ -1,4 +1,4 @@
-\chapter{Methods: Example Application and Library}
+\chapter{Methods}
 \label{chapter:methods}
 
 \section{Qt Developer Days 2011 Conference Schedule Application}
