--- a/thesis/results.tex
+++ b/thesis/results.tex
@@ -1,4 +1,4 @@
-\chapter{Results: What Was Good and Where Were the Compromises}
+\chapter{Results}
 \label{chapter:results}
 
 \section{Targeting Different Platforms}
