Add intro and quote.

--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -1,6 +1,42 @@
 \chapter{Introduction}
 \label{chapter:introduction}
 
+20 years after its birth, the Web has become one of the defining
+technological innovations that knows no geographical, political, or
+ideological boundaries. The world wide platform built on top of the
+physical Internet is deeply integrated into our daily lives. This
+powerful tool that was built on egalitarian principles is now taken
+for granted, just like old innovations such as
+electricity. \cite{berners2010long}
+
+In parallel with the rapid growth of the Web, mobile phones have
+evolved from briefcase-sized ``portable'' telephony devices into
+modern pocket-sized computers. The mobile revolution has already
+changed the world as we see it, and more people have access to the Web
+from a mobile device than from an Internet-connected desktop
+computer. \cite{fling2009mobile}
+
+The Web is not constrained into (desktop and laptop) computers and
+mobile phones, though. Tablets, TVs, ebook readers, watches, and even
+household appliances are connecting to the Internet and have web
+browsers. For the first time in history, we have a truly ubiquitous
+digital medium. \cite{fling2009mobile}
+
+Universal accessibility and openness are the keys to being the
+ubiquitous information platform of the digital age
+\cite{berners2010long}. For the first time the Web truly accomplishes
+its original principles in equality and universality; anyone can
+access the vast source of open information from anywhere, with any
+device. All you need is a web browser that supports the open standards
+of the Web.
+
+\begin{quotation}
+  \noindent \textit{The goal of the Web is to serve humanity.}
+  \begin{flushright}
+    -- Tim Berners-Lee \cite{berners2010long}
+  \end{flushright}
+\end{quotation}
+
 \begin{quotation}
   \noindent \textit{Not only does the majority of the mobile community
     believe that the mobile web is the future of the mobile medium,
