--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -102,3 +102,13 @@
   year={2009},
   publisher={O'Reilly Media, Inc.}
 }
+@article{cortimiglia2011mobile,
+  title={{M}obile {A}pplications and {T}heir {D}elivery {P}latforms},
+  author={Cortimiglia, M.N. and Ghezzi, A. and Renga, F.},
+  journal={IT Professional},
+  volume={13},
+  number={5},
+  pages={51--56},
+  year={2011},
+  publisher={IEEE}
+}
