Expand intro and add HTML5 subsections.

--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -24,11 +24,10 @@ digital medium. \cite{fling2009mobile}
 
 Universal accessibility and openness are the keys to being the
 ubiquitous information platform of the digital age
-\cite{berners2010long}. For the first time the Web truly accomplishes
-its original principles in equality and universality; anyone can
-access the vast source of open information from anywhere, with any
-device. All you need is a web browser that supports the open standards
-of the Web.
+\cite{berners2010long}. Now the Web truly accomplishes its original
+principles in equality and universality; anyone can access this vast
+source of open information from anywhere, with any device. All you
+need is a web browser that supports the open standards of the Web.
 
 \begin{quotation}
   \noindent \textit{The goal of the Web is to serve humanity.}
@@ -37,18 +36,24 @@ of the Web.
   \end{flushright}
 \end{quotation}
 
-\begin{quotation}
-  \noindent \textit{Not only does the majority of the mobile community
-    believe that the mobile web is the future of the mobile medium,
-    but I've also found it to have the highest return on investment,
-    be it in terms of money, user satisfaction, or development time.}
-  \begin{flushright}
-    -- Brian Fling \cite{fling2009mobile}
-  \end{flushright}
-\end{quotation}
+Being the universal digital medium, mobile has some unique
+characteristics that other mass media lack. Mobile is personal,
+always-on, always-carried medium with a built-in payment
+channel. Mobile is in your pocket at the moment you have your creative
+impulse. \cite{fling2009mobile}
 
-\section{Smartphone Landscape}
-\label{section:smartphone-landscape}
+These characteristics have made mobile applications a
+multibillion-dollar business. 5 years after Apple published its
+game-changing iPhone and the App Store, touch screen mobile phones and
+tablets from different device manufacturers have spread all over the
+world. \cite{cortimiglia2011mobile, charland2011mobile,
+  fling2009mobile}
+
+However, this proliferation of mobile devices and platforms has raised
+a serious issue for application developers: fragmentation. Not only is
+there multiple target platforms, but even within the platforms there
+are different versions with different feature sets, not to mention
+different devices with varying capabilities. \cite{charland2011mobile}
 
 \begin{table}
   \begin{tabular}{ l | l }
@@ -68,14 +73,76 @@ of the Web.
   \caption{Required skill sets for different mobile platforms. \cite{charland2011mobile}}
 \end{table}
 
+Table~\ref{table:native-skills} (\fixme{check table ref number}) shows
+the required skill sets for different platforms. As we see, each
+platform has its own programming language and \abbr{SDK}. A lot of
+knowledge and resources is needed to providing cross-platform
+applications for these platforms. Making several independent
+applications with the native tools is also very expensive, and adding
+features or just maintaining all these different applications becomes
+costly. \cite{charland2011mobile}
+
+Some developers take the easy way out, and build their applications
+only for one platform. This might be fine for independent developers,
+but a lot of potential customers or users are left out of these walled
+gardens. Big corporations or public organizations cannot afford
+leaving out large shares of the mobile market. \cite{berners2010long}
+
+\fixme{add platform market share figure}
+
+Being cross-platform is essential in today's mobile market. And if the
+required skills and resources for the native tools are not present,
+other options have to be considered. All mobile devices have a web
+browser, and the Web is becoming the universal application
+platform. \cite{taivalsaari2011web, mikkonen2011apps}
+
+In the 20 years of its lifetime, the Web has evolved from a simple
+system for sharing documents into a massively popular, world wide
+application and information distribution environment
+\cite{taivalsaari2011web}. During the Web 2.0 revolution
+\citationneeded, the Web grew into a serious platform for interactive
+applications with the help of technologies like \abbr{Ajax}
+\cite{garrett2005ajax}.
+
+The Web is not without its problems, however. The viral spreading of
+mobile phones has raised the need for a feature-rich technology stack
+for building scalable applications that can handle the whole spectrum
+of devices, screen sizes, and form factors that are used to access the
+Internet. This is the need that \abbr{HTML5} with all the related
+tools and \abbr{APIs} have promised to solve.
+
+Performance is the foundation of a great user experience. Native tools
+have been carefully optimized to provide the best possible performance
+and responsiveness, and web applications are often unfavorably
+compared to them. In the end, however, the received savings in
+development time, deployment, cost-efficiency, and cross-platform
+support can often outweigh the possible
+compromises. \cite{charland2011mobile, fling2009mobile}
+
+In this work we look at the performance of \abbr{HTML5} as a
+cross-platform application platform for different device
+form-factors. We built an real world HTML5 application and a
+JavaScript library and fine-tuned the performance to get the best
+possible user experience. We then asses these optimizations and the
+compromises that had to be made.
+
 \section{HTML5}
 \label{section:html5}
 
 \subsection{History}
-\subsection{Markup}
-\subsection{CSS3}
-\subsection{JavaScript APIs}
-\subsection{Related APIs}
+\subsection{Semantic Markup}
+\subsection{Graphics and Typography}
+\subsection{Media}
+\subsection{Interaction and Messaging}
+\subsection{Storage and Offline}
+\subsection{Files}
+\subsection{Real-time Communication}
+\subsection{History}
+\subsection{Performance}
+\subsection{Security and Privacy}
+\subsection{Device APIs}
+\subsection{WebGL}
+\subsection{Other}
 
 \section{Modern Mobile Web Application Architecture}
 \label{section:modern-mobile-web}
@@ -230,10 +297,10 @@ performance guidelines defined by Souders \cite{souders2007high,
 
 \item \textbf{Make Ajax Cacheable}
 
-  Highly dynamic web sites have a lot of \abbr{Ajax} functionality,
-  and developers should make sure all the requested URLs for data
-  fetching follow the performance best practices such as having the
-  proper caching in place.
+  Highly dynamic web sites have a lot of \abbr{Ajax}
+  \cite{garrett2005ajax} functionality, and developers should make
+  sure all the requested URLs for data fetching follow the performance
+  best practices such as having the proper caching in place.
 
   % Even Faster Web Sites
 
