--- a/thesis/results.tex
+++ b/thesis/results.tex
@@ -352,10 +352,10 @@ improve application performance and reduce bugs.
 
 JSLint\footnote{\url{http://jslint.com/}} is a code quality tool for
 JavaScript. There are several JavaScript features that are suboptimal
-for performance or code maintainability. JSLint also checks for
-JavaScript syntax and convention violations, which is valuable because
-the code will be sent in the source form to be interpreted by the
-browser.
+for performance or code maintainability
+\cite{crockford2008javascript}. JSLint also checks for JavaScript
+syntax and convention violations, which is valuable because the code
+will be sent in the source form to be interpreted by the browser.
 
 We had automatic JSLint checking integrated in the Emacs
 \citationneeded editor that we used for all JavaScript programming,
