Add HTML5 API subsections.

--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -129,20 +129,76 @@ compromises that had to be made.
 \section{HTML5}
 \label{section:html5}
 
-\subsection{History}
 \subsection{Semantic Markup}
+
+
 \subsection{Graphics and Typography}
+
+\subsubsection{CSS3}
+\subsubsection{SVG}
+\subsubsection{Canvas}
+\subsubsection{WebGL}
+\subsubsection{Web Fonts}
+\subsubsection{MathML}
+
 \subsection{Media}
+
+\subsubsection{Audio}
+\subsubsection{Video}
+\subsubsection{Subtitles}
+
 \subsection{Interaction and Messaging}
+
+\subsubsection{Drag and Drop}
+\subsubsection{Touch Events}
+\subsubsection{Web Notifications}
+\subsubsection{Web Messaging}
+\subsubsection{Fullscreen and Mouse Lock}
+\subsubsection{Clipboard}
+
 \subsection{Storage and Offline}
+
+\subsubsection{Web Storage}
+\subsubsection{Indexed Database}
+\subsubsection{Application Cache}
+\subsubsection{Network State}
+
 \subsection{Files}
+
+
+
 \subsection{Real-time Communication}
+
+\subsubsection{Web Real-time Communication}
+\subsubsection{Web Sockets}
+\subsubsection{Server-Sent Events}
+\subsubsection{Web Sockets}
+
 \subsection{History}
+
+\subsubsection{History manipulation}
+\subsubsection{Hashchange Event}
+
 \subsection{Performance}
+
+\subsubsection{Web Workers}
+\subsubsection{Timing}
+\subsubsection{Page Visibility}
+
 \subsection{Security and Privacy}
+
+\subsubsection{Cross-Origin Resource Sharing}
+
 \subsection{Device APIs}
-\subsection{WebGL}
+
+\subsubsection{Geolocation}
+\subsubsection{Device Orientation}
+\subsubsection{Gamepad}
+\subsubsection{User Media}
+
 \subsection{Other}
+
+
 
 \section{Modern Mobile Web Application Architecture}
 \label{section:modern-mobile-web}
