--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -1,2 +1,13 @@
 \chapter{Discussion: Bright Future Ahead for HTML5}
 \label{chapter:discussion}
+
+\begin{quotation}
+  \noindent \textit{Context  is what makes mobile such  a powerful and
+    exiting  medium. It  takes  the foundational  concepts of  western
+    civilization  and   evolves  them  to   create  a  new   means  of
+    understanding,  or what  ancient Creeks  called  inventio, meaning
+    both invention and discovery.}
+  \begin{flushright}
+    -- Brian Fling \cite{fling2009mobile}
+  \end{flushright}
+\end{quotation}
