--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -26,7 +26,7 @@
   title={{HTML}5: {U}p {A}nd {R}unning},
   author={Pilgrim, M.},
   year={2010},
-  publisher={O'Reilly Media},
+  publisher={O'Reilly Media / Google Press},
   isbn={978-0-596-80602-6}
 }
 @book{crockford2008javascript,
