Add note about content.

--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -1,6 +1,11 @@
 \chapter{Discussion: Bright Future Ahead for HTML5}
 \label{chapter:discussion}
 
+\begin{itemize}
+\item validate results
+\item discuss about further work or possible improvements
+\end{itemize}
+
 \begin{quotation}
   \noindent \textit{Context  is what makes mobile such  a powerful and
     exiting  medium. It  takes  the foundational  concepts of  western
