Add conclusions section in the results.

--- a/thesis/results.tex
+++ b/thesis/results.tex
@@ -499,3 +499,5 @@ note means that query parameters like '?123' should be removed from
 the end of the \abbr{URLs} because they might not be cached in some
 proxies. We did not change this because the query strings in the
 static assets were an essential part of our caching strategy.
+
+\section{Conclusions}
