Add requirements section in methods.

--- a/thesis/methods.tex
+++ b/thesis/methods.tex
@@ -11,6 +11,10 @@ conference for developers using the Qt cross-platform application and
 mobile web application with contextual and personalized session
 information and daily schedule for the conference.
 
+\subsection{Requirements}
+
+
+
 \subsection{Application Architecture}
 
 \begin{figure}[ht]
